[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Game/Background1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Game/Forever.gd" type="Script" id=3]
[ext_resource path="res://Fonts/BubblegumSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sounds/fun-background-hip-hop-short-music-27-sec-energetic-vlog-music-148916.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 16.5 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 4 )

[node name="Forever" type="Node2D"]
script = ExtResource( 3 )

[node name="Background1" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 607, 465 )

[node name="VerticalFootTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Boundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary"]
position = Vector2( 630, 6.5 )
shape = SubResource( 1 )

[node name="Boundary2" type="StaticBody2D" parent="."]
position = Vector2( 8, 696 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary2"]
position = Vector2( 630, 6.5 )
shape = SubResource( 1 )

[node name="Boundary3" type="StaticBody2D" parent="."]
position = Vector2( 8, -144 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary3"]
position = Vector2( 646, -103.002 )
shape = SubResource( 1 )

[node name="Boundary4" type="StaticBody2D" parent="."]
position = Vector2( 1272, -144 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary4"]
position = Vector2( 630, 107.998 )
shape = SubResource( 1 )

[node name="FootHor" type="Position2D" parent="."]
position = Vector2( 1210, 52 )

[node name="HorizontalFootTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
bus = "Music"

[node name="HandPos" type="Position2D" parent="."]
position = Vector2( -16, 368 )

[node name="HandPos2" type="Position2D" parent="."]
position = Vector2( 1288, 368 )

[node name="HandTimer" type="Timer" parent="."]
wait_time = 13.0
autostart = true

[node name="Skor" type="Label" parent="."]
margin_left = 603.0
margin_top = 26.0
margin_right = 643.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="SkorTimer" type="Timer" parent="."]
autostart = true

[node name="Trash" type="Node2D" parent="."]

[node name="TrashPos" type="Position2D" parent="Trash"]
position = Vector2( 224, 0 )

[node name="TrashPos2" type="Position2D" parent="Trash"]
position = Vector2( 424, 0 )

[node name="TrashPos3" type="Position2D" parent="Trash"]
position = Vector2( 636, 0 )

[node name="TrashPos4" type="Position2D" parent="Trash"]
position = Vector2( 840, 0 )

[node name="TrashPos5" type="Position2D" parent="Trash"]
position = Vector2( 1008, 0 )

[node name="TrashPos6" type="Position2D" parent="Trash"]
position = Vector2( 1008, 0 )

[node name="TrashTimer" type="Timer" parent="Trash"]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="VerticalFootTimer" to="." method="_on_VerticalFootTimer_timeout"]
[connection signal="timeout" from="HorizontalFootTimer" to="." method="_on_HorizontalFootTimer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="HandTimer" to="." method="_on_HandTimer_timeout"]
[connection signal="timeout" from="SkorTimer" to="." method="_on_SkorTimer_timeout"]
[connection signal="timeout" from="Trash/TrashTimer" to="." method="_on_TrashTimer_timeout"]
